--- a/src/frontend/css/General.css
+++ b/src/frontend/css/General.css
@@ -113,11 +113,12 @@ button {
     font-size: 16px;
     padding: 6px 10px;
     border-radius: 7px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     gap: 8px;
     cursor: pointer;
     transition: all 0.3s ease;
+    white-space: nowrap;
 }
 
 button.skill-button {
